styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    height: 100vh;
    overflow: hidden;
}

.content {
    flex: 1;
    display: flex;
    flex-direction: column;
}

header {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
}

.header-links {
    font-size: 18px;
    color: #E5E7EB;
}   

ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.body-one {
    background-color: #1F2937;
    color: #F9FAF8;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

.one-left {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    gap: 5px;
}

.b1 {
    background-color: #3882F6;
    color: white;
    border-radius: 6px;
    padding: 5px 20px;
    border-style: none;
}

.b1:hover{
    cursor: pointer; 
}

.one-right {
    background-color: rgba(128, 128, 128, 0.373);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 500px;
    height: 150px;
}

.website {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 800;
}

.body-two {
    text-align: center;
    height: 100%;
}

.items-title {
    margin-bottom: 20px;
    margin-top: 10px;
    font-size: large;
    font-weight: bold;
}

.illustration {
    border: 3px solid rgb(0, 208, 255);
    height: 100px;
    width: 100px;
    border-radius: 16px;
}

.items {
    display: flex;
    justify-content: center;
    gap: 50px;
    align-items: center;
}

.info {
    max-width: 100px;
}

.body-three {
    height: 100%;
    background-color: #E5E7EB;
    color: #1F2937;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0 600px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
}

.body-four {
    height: 100%;
    color: #F9FAF8;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.call-to-action {
    background-color: #3882F6;
    border-radius: 16px;
    padding: 20px;
    width: 800px;
}

footer {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #E5E7EB;
    padding: 20px;
}

.b2 {
    background-color: #3882F6;
    color: white;
    border-radius: 6px;
    padding: 5px 20px;
    border-color: white;
    border-style: solid;
}

.b2:hover{
    cursor: pointer; 
}

